# arkham_assistant

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: work_issue.md
.cursor/rules/: documentation-updates.mdc  javascript-testing.mdc  no-new-docs.mdc  project-standards.mdc  python-conventions.mdc  testing-requirements.mdc
backend/: .env.example  __init__.py  main.py
backend/api/: cards.py  characters.py  chat.py  decks.py  logs.py  sim.py
backend/core/: logging_config.py
backend/middleware/: __init__.py  logging_middleware.py
backend/models/: __init__.py  deck_builder_models.py  deck_constraints.py  simulation_models.py  (+1 more)
docs/: ai_agent_design.md  architecture_overview.md  data_retrieval_design.md  database_crud_design.md  decision_architecture.md  frontend_design.md  simulation_design.md
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
scripts/: fetch_arkhamdb.py  owned_sets.json  verify_db.py
tests/: conftest.py  test_action_space_agent.py  test_action_space_agent_integration.py  test_agent_tools.py  test_agent_tools_integration.py  test_chat_api.py  test_context_builder.py  test_deck_builder.py  test_deck_upgrade.py  test_deck_validator.py  test_llm_config.py  test_orchestrator.py  test_prompts.py  test_rules_agent.py  test_rules_agent_integration.py  test_scenario_agent.py  test_scenario_loader.py  test_simulator.py  test_state_agent.py  test_subagent_base.py  test_subagent_cache.py  test_subagent_integration.py  test_subagent_models.py
(+59 files in other folders)
